--- a/src/main/java/top/wsure/interview/花旗1面.md
+++ b/src/main/java/top/wsure/interview/花旗1面.md
@@ -26,11 +26,13 @@
 
 ### 问了下poi的性能问题 
 
+### ci/cd 等 devops相关
+
 ### 聊了下自己的开源项目，nodejs和kotlin
 
 ### docker
 
-### ci/cd 等 devops相关
+### 聊自己项目聊到了 websocket，问了下ws和http的不同和优劣
 
 ## 反问
 
