--- a/src/main/java/top/wsure/interview/蔚来1面.md
+++ b/src/main/java/top/wsure/interview/蔚来1面.md
@@ -13,6 +13,7 @@
 ### 配置线程池核心线程数的时候考量什么（机器cpu核心数、逻辑是io密集型还是cpu密集型？ io密集型即使线程数多也不会频繁切换线程上下文）
 ### springboot自动装配
 ### doubbo 服务发现、调用流程
+### 序列化时，实现序列化ID有什么用，如果序列化ID变了会怎么样
 ### zookeeper数据结构、节点是否是永久
 ### zookeeper的CP， C
 ### mysql的索引B+树好处
